added basic file structure and producs

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <div id="products"></div>
     <div class="card card-vertical d-flex direction-column relative shadow" bis_skin_checked="1">
         <div class="card-image-container" bis_skin_checked="1">
             <img class="img-responsive" src="/assets/images/shoe.png" alt="shoes"> 
